tests/src/frontend/syntax/invalid/lvalue_bad_token.sk
fun main(): String {
  X = 42;
  "Fail"
}
